<resources>
    <string name="app_name">Practica02</string>
    <string name="student_avatar_description">Imagen estudiante</string>
    <string name="name_tag_label">Nombre</string>
    <string name="surname_tag_label">Apellidos</string>
    <string name="mail_tag_label">Email</string>
    <string name="city_tag_label">Ciudad</string>
    <string name="center_tag_label">Centro</string>
    <string name="tutor_tag_label">Tutor</string>
    <string name="calendar_student_description">Calendario estudiante</string>
    <string name="transformDates_monday">Lunes</string>
    <string name="transformDates_tuesday">Martes</string>
    <string name="transformDates_wednesday">Miércoles</string>
    <string name="transformDates_thursday">Jueves</string>
    <string name="transformDates_friday">Viernes</string>
    <string name="transformDates_saturday">Sabado</string>
    <string name="transformDates_sunday">Domingo</string>
    <string name="transformDates_january">Enero</string>
    <string name="transformDates_february">Febrero</string>
    <string name="transformDates_march">Marzo</string>
    <string name="transformDates_april">Abril</string>
    <string name="transformDates_may">Mayo</string>
    <string name="transformDates_june">Junio</string>
    <string name="transformDates_july">Julio</string>
    <string name="transformDates_august">Agosto</string>
    <string name="transformDates_september">Septiembre</string>
    <string name="transformDates_october">Octubre</string>
    <string name="transformDates_november">Noviembre</string>
    <string name="transformDates_december">Diciembre</string>
    <string name="attendance_activity_student_photo">Foto del estudiante</string>
    <string name="attendance_dialog_btn_cancelar">Cancelar</string>
    <string name="attendance_dialog_formation">Formación</string>
    <string name="attendance_dialog_holidays">Vacaciones</string>
    <string name="attendance_dialog_class">Clases</string>
</resources>